test/good/automatic/extension/array/without_input/ret_zero/0011.lat
int main() {
    int[] a = new int[20];
    for(int b : a) {
      {
        string b = "20";
      }
    }
    return 0;
}
