test/bad/automatic/extension/array/runtime/without_input/0001.lat
int main() {
  string[] sa = new string[5];

  for(string sc : sa) {
    printString(sc);
  }

  return 0;
}